--- a/localisation_original/KS_missions_ming_l_english.yml
+++ b/localisation_original/KS_missions_ming_l_english.yml
@@ -2,19 +2,22 @@ l_english:
   # ks.ming.missions.manchu_affairs
   ks.ming.mission.consolidate_jianzhou_title: "巩固建州三卫"
   ks.ming.mission.consolidate_jianzhou_desc: ""
-  ks.ming.mission.consolidate_jianzhou.effect.tooltip: "任务完成时，如果满足了第一个条件，将这些国家变为你的附庸国。否则，你获得所有满洲地区内女真文化省份的永久性宣称。"
+  ks.ming.mission.consolidate_jianzhou.effect.tooltip: "这个任务的奖励取决于完成任务的方式。\n\n任务完成时，如果满足了第一个条件，将这些国家变为你的附庸国。\n\n否则，你获得所有满洲地区内女真文化省份的永久性宣称。"
   # ks.ming.missions.far_east_affairs
   ks.ming.mission.sweep_out_japanese_pirates_title: "整治倭患"
   ks.ming.mission.sweep_out_japanese_pirates_desc: ""
   ks.ming.mission.our_attitude_to_choson_title: "对朝方针"
   ks.ming.mission.our_attitude_to_choson_desc: ""
+  ks.ming.mission.our_attitude_to_choson.effect.tooltip: "这个任务的奖励取决于完成任务的方式。\n\n任务完成时，如果§Y朝鲜§!是你的属国，触发「§Y摆明态度！§!」事件。\n\n否则，你获得对§Y朝鲜§!的§Y附庸国家§!宣战理由。"
   # ks.ming.missions.southeastern_asia_affairs_and_australia_colonization
   ks.ming.mission.navy_of_ming_title: "大明水师"
   ks.ming.mission.navy_of_ming_desc: ""
   ks.ming.mission.reopen_foreign_shipping_bureau_title: "重开市舶司"
   ks.ming.mission.reopen_foreign_shipping_bureau_desc: ""
-  ks.ming.mission.reset_old_port_xuanwei_division_title: "重建旧港宣慰司"
+  ks.ming.mission.reset_old_port_xuanwei_division_title: "旧港宣慰司"
   ks.ming.mission.reset_old_port_xuanwei_division_desc: ""
+  ks.ming.mission.continue_the_voyage_title: "再下西洋"
+  ks.ming.mission.continue_the_voyage_desc: ""
   # ks.ming.missions.conquering_mongolia
   ks.ming.mission.punish_oirat_title: "保护河套"
   ks.ming.mission.punish_oirat_desc: ""
@@ -25,3 +28,7 @@ l_english:
   # ks.ming.missions.control_tibet
   ks.ming.mission.restrain_kang_title: "羁縻康藏"
   ks.ming.mission.restrain_kang_desc: ""
+  ks.ming.mission.snowy_holy_land_title: "雪域圣地"
+  ks.ming.mission.snowy_holy_land_desc: ""
+  ks.ming.mission.all_created_things_title: "一切有为法"
+  ks.ming.mission.all_created_things_desc: ""
